buildpacks/dotnet/src/snapshots/publish_command_system_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
- [1;36mDebug info[0m
  - foo bar baz

[0;31m! Unable to publish[0m
[0;31m![0m
[0;31m! An unexpected I/O error occurred while running the command to publish the .NET solution/project.[0m
[0;31m![0m
[0;31m! Use the debug information above to troubleshoot and retry your build. If the[0m
[0;31m! issue persists, file an issue here:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet/issues/new[0m
