buildpacks/dotnet/src/snapshots/restore_dotnet_tools_command_system_error.snap
---
source: buildpacks/dotnet/src/errors.rs
---
- [1;36mDebug info[0m
  - foo bar baz

[0;31m! Unable to restore .NET tools[0m
[0;31m![0m
[0;31m! An unexpected I/O error occurred while running the command to restore .NET tools.[0m
[0;31m![0m
[0;31m! Use the debug information above to troubleshoot and retry your build. If the[0m
[0;31m! issue persists, file an issue here:[0m
[0;31m! https://github.com/heroku/buildpacks-dotnet/issues/new[0m
